# SpringQL-client-c

./: .git-pr-release-template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  build.rs  cbindgen.toml  springql.h
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  create-release.yml  release.yml
c_example/: CMakeLists.txt  README.md  example.c  print_trade.py  trade_server.py
c_example/doc_app1/: doc_app1.c
c_example/doc_app2/: doc_app2.c
c_example/trade_projection/: trade_projection.c
src/: c_mem.rs  conf.rs  cstr.rs  lib.rs  pipe_ptr.rs  row_ptr.rs  spring_config.rs  spring_errno.rs  spring_last_err.rs  spring_last_errmsg.rs  spring_pipeline.rs  spring_row.rs  spring_sink_row.rs  spring_source_row.rs  spring_source_row_builder.rs  tests.rs
src/tests/: mod.rs  spring_config.rs  spring_open.rs  spring_sink_row.rs  spring_source_row_builder.rs
