[package]
name = "springql-client-c"
version = "0.15.0+2"

authors = ["Sho Nakatani <lay.sakura@gmail.com>"]
license = "MIT OR Apache-2.0"

edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "springql_client"

[build-dependencies]
cbindgen = "0.24"

[dependencies]
springql = { path="../SpringQL/springql", version="0.15.0" }
log = "0.4"
